; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_Frame.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_Frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Devices_enable_h_patch = common dso_local global i64 0, align 8
@h_entry_address = common dso_local global i32 0, align 4
@H_TABLE_ADDRESS = common dso_local global i32 0, align 4
@Devices_enable_b_patch = common dso_local global i64 0, align 8
@b_entry_address = common dso_local global i32 0, align 4
@B_TABLE_ADDRESS = common dso_local global i32 0, align 4
@Devices_enable_r_patch = common dso_local global i64 0, align 8
@R_TABLE_ADDRESS = common dso_local global i32 0, align 4
@r_entry_address = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Devices_Frame() #0 {
  %1 = load i64, i64* @Devices_enable_h_patch, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i32, i32* @h_entry_address, align 4
  %5 = load i32, i32* @H_TABLE_ADDRESS, align 4
  %6 = call i32 @Devices_UpdateHATABSEntry(i8 signext 72, i32 %4, i32 %5)
  store i32 %6, i32* @h_entry_address, align 4
  br label %7

7:                                                ; preds = %3, %0
  %8 = load i64, i64* @Devices_enable_b_patch, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load i32, i32* @b_entry_address, align 4
  %12 = load i32, i32* @B_TABLE_ADDRESS, align 4
  %13 = call i32 @Devices_UpdateHATABSEntry(i8 signext 66, i32 %11, i32 %12)
  store i32 %13, i32* @b_entry_address, align 4
  br label %14

14:                                               ; preds = %10, %7
  ret void
}

declare dso_local i32 @Devices_UpdateHATABSEntry(i8 signext, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
